[gd_scene format=3 uid="uid://bne67gm7eglh2"]

[ext_resource type="Script" uid="uid://cxdj6um33dulw" path="res://Script/ad_manager.gd" id="1_1qdk4"]
[ext_resource type="Script" uid="uid://ctr4wc8onnroy" path="res://addons/AdmobPlugin/Admob.gd" id="2_jvpfa"]

[node name="AdManager" type="Node2D" unique_id=228627418]
script = ExtResource("1_1qdk4")

[node name="ShopAdmob" type="Node" parent="." unique_id=1476321892]
script = ExtResource("2_jvpfa")
android_debug_application_id = "ca-app-pub-3940256099942544~3347511713"
metadata/_custom_type_script = "uid://ctr4wc8onnroy"

[connection signal="consent_info_updated" from="ShopAdmob" to="." method="_on_shop_admob_consent_info_updated"]
[connection signal="initialization_completed" from="ShopAdmob" to="." method="_on_shop_admob_initialization_completed"]
[connection signal="rewarded_ad_dismissed_full_screen_content" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_dismissed_full_screen_content"]
[connection signal="rewarded_ad_loaded" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_loaded"]
[connection signal="rewarded_ad_user_earned_reward" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_user_earned_reward"]
[connection signal="rewarded_interstitial_ad_user_earned_reward" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_interstitial_ad_user_earned_reward"]
